# simple-cafeteria

./: README.md  manage.py  pyproject.toml
backend/: Dockerfile  Dockerfile.prod  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  settings.py  urls.py
backend/cafe/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/cafe/migrations/: 0001_initial.py
backend/cafe_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/config/: database.ts
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.ts
